build: rename main Git branch to main

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
 [submodule "_posts"]
 	path = _posts
 	url = https://github.com/DeadRooster/articles
-	branch = master
+	branch = main
 	ignore = all
