--- a/_config.yml
+++ b/_config.yml
@@ -25,9 +25,7 @@ repository:
   name: DeadRooster/articles
 permalink: /:title/
 description: >- # this means to ignore newlines until "baseurl:"
-  Un blog de 15 ans, rédigés par des presque quarantenaires qui parlent de rock,
-  de films, de foot et de n'imp. Autrefois fringuant, aujourd'hui moins disert
-  et en cours de migration vers le 3.0.
+  Surtout du rock, des films, du foot et de la pop culture.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://deadrooster.org" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: dead__rooster
