chore: add more chansons du jour as pseudo-CMS

--- a/_data/chanson-du-jour.yml
+++ b/_data/chanson-du-jour.yml
@@ -65,3 +65,30 @@
     Encore une chanson géniale et insupportable à la fois, merci Vampire
     Weekend ! La compétition entre ce titre et le
     [_Default_](https://youtu.be/DDjpOrlfh0Y) de Django Django est ouverte.
+- artist: Franz Ferdinand
+  title: Love Illumination
+  date: "2013-07-03"
+  youtube: Ooq23i-QGBM
+  comment: >-
+    Ça faisait un bail que Franz Ferdinand n'avait pas montré le bout de son nez
+    dans nos pages, mais leur 4ème LP est en phase d'atterrissage. 
+
+    Premier titre : _Love Illumination_. 
+
+    _Right Thoughts, Right Words, Right Action_ sortira fin août, et ne contient
+    a priori [aucun titre avec Marion Cotillard][i1256].
+- artist: Franz Ferdinand
+  title: Right Action
+  date: "2013-07-04"
+  youtube: RqTsUtQLRFk
+- artist: Okkervil River
+  title: It Was My Season
+  date: "2013-06-28"
+  youtube: PjLP1n3h7Vc
+- artist: Bleached
+  title: Dead In Your Head
+  date: "2013-06-27"
+  youtube: uCN9FCQ_P84
+  comment: >-
+    Clip gavé psyché pour cet extrait de _Ride Your Heart_, premier album de
+    Bleached
