chore: cms-ization of songs of the day

--- a/_data/chanson-du-jour.yml
+++ b/_data/chanson-du-jour.yml
@@ -92,3 +92,11 @@
   comment: >-
     Clip gavé psyché pour cet extrait de _Ride Your Heart_, premier album de
     Bleached
+- artist: Drew Barrymore & Hugh Grant
+  title: Way Back Into Love
+  date: "2007-03-19"
+  youtube: T2PIz4e09EY
+  comment: >-
+    Composée par Adam Schlesinger, le bassiste de Foutains of Wayne. En bonus,
+    [*PoP Goes My Heart*](https://youtu.be/xVkU8dDSC9w) est recommandé
+    également.
