--- a/_data/chanson-du-jour.yml
+++ b/_data/chanson-du-jour.yml
@@ -50,6 +50,10 @@
 
     Mais même si ça va nous faire faire des cauchemars, ça va aussi nous faire
     acheter un banjo !
+- artist: The Shings
+  title: Simple Song
+  date: "2012-02-23"
+  youtube: RoLTPcD1S4Q
 - artist: Vampire Weekend
   title: Step
   date: "2013-04-05"
@@ -100,3 +104,7 @@
     Composée par Adam Schlesinger, le bassiste de Foutains of Wayne. En bonus,
     [*PoP Goes My Heart*](https://youtu.be/xVkU8dDSC9w) est recommandé
     également.
+- artist: Tennis
+  title: Tears in the Typing Pool
+  date: "2012-07-10"
+  soundcloud: "30611632"
