--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,8 @@ jobs:
   lighthouseci:
     name: Lighthouse CI
     runs-on: ubuntu-latest
+    env:
+      GOOGLE_SEARCH_CONSOLE_VERIFICATION_TOKEN: dummy
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
