feat: 🎸 Add song to collection

--- a/_data/chanson-du-jour.yml
+++ b/_data/chanson-du-jour.yml
@@ -108,3 +108,7 @@
   title: Tears in the Typing Pool
   date: "2012-07-10"
   soundcloud: "30611632"
+- artist: Ceramic Animal
+  title: Valerie
+  date: "2022-04-06"
+  youtube: eWJm30EwdtE
