--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ jobs:
     name: Lighthouse CI
     runs-on: ubuntu-latest
     env:
-      GOOGLE_SEARCH_CONSOLE_VERIFICATION_TOKEN: dummy
+      JEKYLL_ENV: production
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
@@ -15,5 +15,5 @@ jobs:
         with:
           ruby-version: "2.7"
       - run: npm install -g @lhci/cli@0.8.x
-      - run: JEKYLL_ENV=production make install build
+      - run: make install build
       - run: lhci autorun
