--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,11 @@ vendor
 
 /node_modules
 
-# VS Code
-.vscode/configurationCache.log
-.vscode/dryrun.log
-.vscode/targets.log
+# Yarn berry
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
