feat: 🎸 Add chanson du jour

--- a/_data/chanson-du-jour.yml
+++ b/_data/chanson-du-jour.yml
@@ -54,6 +54,10 @@
   title: Simple Song
   date: "2012-02-23"
   youtube: RoLTPcD1S4Q
+- artist: Tame Impala
+  title: Elephant
+  date: "2012-07-30"
+  youtube: b0jqPvpn3sY
 - artist: Vampire Weekend
   title: Step
   date: "2013-04-05"
