feat: 🎸 Add chanson du jour

--- a/_data/chanson-du-jour.yml
+++ b/_data/chanson-du-jour.yml
@@ -116,3 +116,9 @@
   title: Valerie
   date: "2022-04-06"
   youtube: eWJm30EwdtE
+- artist: Sea Wolf
+  title: Leaves In The River
+  date: "2012-09-07"
+  youtube: vu129ihLOyI
+  comment: >-
+    Merci à Julien T.
